--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,9 @@ jobs:
       - go_mod_download
       - run:
           name: go test
-          command: go test ./... -v -coverprofile=coverage.out -covermode=atomic
+          command: ./bin/test
+      - store_artifacts:
+          path: cover.html
       - run:
           name: upload coverage reports to codecov
           command: curl -sL https://codecov.io/bash | bash -
